# library

./: .gitignore  README.md  common-android-library-config.gradle  local.properties
ScanSdk/: build.gradle  local.properties  (+1 more)
scanSdkCore/: CMakeLists.txt  build.gradle
scanSdkCore/sdk/: build.gradle
scanSdkCore/src/androidTest/java/com/scanner/scansdk/: CameraActivityTest.kt
scanSdkCore/src/androidTest/java/com/scanner/scansdkcore/: ExampleInstrumentedTest.kt
scanSdkCore/src/main/: AndroidManifest.xml
scanSdkCore/src/main/cpp/: document_detector.cpp  document_detector.h
scanSdkCore/src/main/java/com/scanner/scansdk/: CameraActivity.kt  ScanSdkCoreImplementation.kt
scanSdkCore/src/main/java/com/scanner/scansdk/camera/: ImageCaptureManager.kt
scanSdkCore/src/main/java/com/scanner/scansdk/camera/binder/: CameraBinder.kt  CameraBinderImpl.kt
scanSdkCore/src/main/java/com/scanner/scansdk/camera/handler/: CameraHandler.kt
scanSdkCore/src/main/java/com/scanner/scansdk/camera/processor/: PhotoProcessor.kt
scanSdkCore/src/main/java/com/scanner/scansdk/camera/utils/: Extensions.kt
scanSdkCore/src/main/java/com/scanner/scansdk/di/modules/: ScanSdkCoreInitializer.kt
scanSdkCore/src/main/java/com/scanner/scansdk/rectangle/: RectangleOverlay.kt
scanSdkCore/src/main/res/layout/: activity_camera.xml
scanSdkCore/src/main/res/values/: strings.xml
scanSdkCore/src/test/java/com/scanner/scansdk/: ScanSdkCoreImplementationTest.kt
scanSdkCore/src/test/java/com/scanner/scansdkcore/: ExampleUnitTest.kt
scanSdkCore/src/test/res/layout/: activity_camera.xml
(+25 files in other folders)
